# aisisstant

./: .gitignore  ARTICLE_LINKEDIN.md  README.md  aisisstant-report  aisisstant-setup  build-deb.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-deploy.yml
aisisstant/: config.py  cwd.py  db.py  main.py  models.py  report.py  scorer.py  stats.py
aisisstant/collectors/: base.py  keyboard.py  microphone.py  mouse.py  window.py
debian/: aisisstant-setup-wrapper  aisisstant-setup.desktop  aisisstant.install  aisisstant.links  changelog  control  copyright  postinst  postrm
docs/: CNAME  app.js  index.html  style.css
gnome-extension/: extension.js  metadata.json
scripts/: install.sh
systemd/: aisisstant.service
tests/: conftest.py  test_collectors_keyboard.py  test_collectors_microphone.py  test_collectors_mouse.py  test_collectors_window.py  test_config.py  test_db.py  test_models.py  test_scorer.py
